--- a/index.html
+++ b/index.html
@@ -736,10 +736,10 @@
                                 <input  class="form-control" type="text" placeholder="Name *" required>
                             </div> -->
                             <div class="form-group">
-                                <input class="form-control" type="email" placeholder="Email *" required>
+                                <input class="form-control" name="email" type="email" placeholder="Email *" required>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" placeholder="Message" rows="7" required></textarea>
+                                <textarea class="form-control" name="message" placeholder="Message" rows="7" required></textarea>
                             </div>
                             <div class="form-group ">
                                 <button type="submit" class="form-control btn btn-primary" >Send Message</button>
